# Xelian

./: .gitignore  ATTRIBUTIONS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_RENDER.md  HANDOFF.md  IMPLEMENTATION.md  LAUNCH.md  LICENSE  PHASE-0-5-REPORT.md  README.md  SECURITY.md  SPEC.md  TRY_IT.md  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  package_report.md
.github/workflows/: ci.yml  release.yml
Formula/: xelian.rb
crates/harbor-cli/: Cargo.toml
crates/harbor-cli/src/: main.rs
crates/harbor-cli/tests/: add.rs  cli.rs  init.rs  push.rs  run.rs
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: auth.rs  cache.rs  checksum.rs  errors.rs  github.rs  init.rs  lib.rs  lockfile.rs  manifest.rs  package.rs  permissions.rs  registry_client.rs  validate.rs
crates/harbor-core/src/run/: extract.rs  launch.rs  mod.rs  model.rs  runtime.rs
crates/xelian-cli/: Cargo.toml
crates/xelian-cli/src/: gateway.rs  main.rs
crates/xelian-cli/tests/: add.rs  cli.rs  init.rs  push.rs  run.rs
crates/xelian-core/: Cargo.toml
crates/xelian-core/src/: auth.rs  cache.rs  checksum.rs  errors.rs  github.rs  init.rs  lib.rs  lockfile.rs  manifest.rs  package.rs  permissions.rs  registry_client.rs  validate.rs
crates/xelian-core/src/github/: build.rs  detect.rs  discover.rs  entrypoint.rs  mod.rs  pkgtype.rs  url.rs
crates/xelian-core/src/run/: env_vars.rs  extract.rs  launch.rs  mod.rs  model.rs  runtime.rs
demo/: LICENSE  README.md  pyproject.toml  xelian.toml
demo/src/: main.py
docs/superpowers/specs/: 2026-07-19-mcp-gateway-design.md  2026-07-19-xelian-rename-website-design.md  2026-07-20-github-import-coverage-design.md
registry/: .env.example  Dockerfile  catalog.json  pyproject.toml
registry/app/: __main__.py  auth.py  db.py  main.py  models.py  resolution.py  storage.py
registry/tests/: conftest.py  test_abuse.py  test_api.py  test_golden.py  test_load.py
scripts/: e2e.sh  harvest_catalog.py  install.sh  make_golden_fixture.py  make_seed.py  publish_catalog.py  publish_seed.sh  reset_and_seed.sh  try-it.sh  verify_catalog.py
sdk/: README.md  pyproject.toml
sdk/harbor/: __init__.py  _cli.py
sdk/tests/: test_integration.py
sdk/xelian/: __init__.py  _cli.py  handles.py
seed/calc/: README.md  pyproject.toml  xelian.toml
seed/calc-mcp/: LICENSE  README.md  pyproject.toml  xelian.toml
seed/calc-mcp/src/: main.py
seed/calc/src/: main.py
seed/fetch-mcp/: README.md  pyproject.toml  xelian.toml
seed/fetch-mcp/src/: main.py
seed/files-mcp/: README.md  pyproject.toml  xelian.toml
seed/files-mcp/src/: main.py
seed/git-mcp/: README.md  pyproject.toml  xelian.toml
seed/git-mcp/src/: main.py
seed/hashkit/: README.md  pyproject.toml  xelian.toml
seed/hashkit/src/: main.py
seed/idgen/: README.md  pyproject.toml  xelian.toml
seed/idgen/src/: main.py
seed/password-gen/: README.md  pyproject.toml  xelian.toml
seed/password-gen/src/: main.py
seed/regex-lab/: README.md  pyproject.toml  xelian.toml
seed/regex-lab/src/: main.py
seed/sqlite-mcp/: README.md  pyproject.toml  xelian.toml
seed/sqlite-mcp/src/: main.py
seed/sysinfo-mcp/: README.md  pyproject.toml  xelian.toml
seed/sysinfo-mcp/src/: main.py
seed/text-mcp/: README.md  pyproject.toml  xelian.toml
seed/text-mcp/src/: main.py
seed/text-stats/: README.md  pyproject.toml  xelian.toml
seed/text-stats/src/: main.py
seed/time-mcp/: README.md  pyproject.toml  xelian.toml
seed/time-mcp/src/: main.py
seed/timekit/: README.md  pyproject.toml  xelian.toml
seed/timekit/src/: main.py
seed/unit-convert/: README.md  pyproject.toml  xelian.toml
seed/unit-convert/src/: main.py
tests/golden/: expected-checksum.txt  fixture.xelian
website/: README.md  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/c/[owner]/[name]/: page.tsx
website/app/explore/: page.tsx
website/app/login/: page.tsx
website/app/new/: page.tsx
website/app/signup/: page.tsx
website/components/: auth-form.tsx  catalog-card.tsx  catalog-teaser.tsx  copy-command.tsx  header.tsx  package-card.tsx  type-badge.tsx
website/lib/: api.ts  auth.tsx
