[workspace]
resolver = "2"
members = ["crates/harbor-cli", "crates/harbor-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
harbor-core = { path = "crates/harbor-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
ignore = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
semver = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
tempfile = "3"
