[project]
name = "xelian-registry"
version = "0.1.0"
description = "Xelian Registry — store and serve AI agent packages."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "semver>=3.0.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]

[dependency-groups]
dev = ["httpx>=0.28.0", "pytest>=8.0"]
