[project]
name = "xelian-sdk"
version = "0.1.0"
description = "Python SDK for Xelian — a local-first registry and runtime for AI agents and MCP servers"
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
