[project]
name = "xelian-sdk"
version = "0.1.1"
description = "Python SDK for Xelian — a local-first registry and runtime for AI agents and MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Xelian" }]
keywords = ["ai", "agents", "mcp", "model-context-protocol", "registry", "runtime", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/yuvitbatra/Xelian"
Repository = "https://github.com/yuvitbatra/Xelian"
Issues = "https://github.com/yuvitbatra/Xelian/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xelian*"]
