[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
ignore = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
