[package]
name = "xelian-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xelian"
path = "src/main.rs"

[dependencies]
xelian-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
